--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
             font-weight: bold;
             margin-top: 20px;
             z-index: 10;
+            display: flex;
+            align-items: center;
         }
 
         .score img {
             width: 30px;
-            vertical-align: middle;
+            margin-left: 10px; /* Отступ между текстом и иконкой */
         }
 
         .star {
